# bugeyed

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/team3316/bugeyed/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/team3316/bugeyed/: DBugApplication.java  DBugGLSurfaceView.java  DBugNativeBridge.java  DBugNetwork.java  DBugPreferences.java  DBugPrefrences.java  DBugTarget.java  DBugUtils.java  MainActivity.java  PreviewType.java
app/src/main/java/com/team3316/bugeyed/fragments/: CalibrateFragment.java  MatchVisionFragment.java  MenuFragment.java
app/src/main/java/com/team3316/bugeyed/opengl/: DBugGLRenderer.java  DBugGLRendererBase.java  DBugGLSurfaceView.java
app/src/main/java/org/opencv/android/: BetterCamera2Renderer.java  BetterCameraGLRendererBase.java
app/src/main/jni/: MJPEGWriter.cpp  MJPEGWriter.h  common.cpp  common.h  common.hpp  libdbugcv.cpp  libdbugcv.h  libdbugnet.cpp  libdbugnet.h  libdbugtcp.cpp  libdbugtcp.h  libdbugudp.cpp  libdbugudp.h  target.cpp  target.h
app/src/main/res/layout/: activity_main.xml  activity_no_perm.xml  fragment_calibrate.xml  fragment_matchvision.xml  fragment_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/team3316/bugeyed/: ExampleUnitTest.java
openCVLibrary343/: build.gradle
openCVLibrary344/: build.gradle
openCVLibrary344/src/main/: AndroidManifest.xml
openCVLibrary344/src/main/java/org/opencv/android/: JavaCamera2View.java
